<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Eat"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_header"
        android:textSize="24sp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_text"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/recipe1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:text="@string/recipe_1" />

    <Button
        android:id="@+id/recipe2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:text="@string/recipe_2" />

    <Button
        android:id="@+id/recipe3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:text="@string/recipe_3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_gravity="fill"
        android:visibility="gone" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:text="@string/return_to_start" />
</GridLayout>