<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Calories"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_header"
        android:textSize="24sp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_text"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:entries="@array/gender_array" />

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint" />

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:inputType="numberDecimal"
        android:hint="@string/height_hint" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:inputType="number"
        android:hint="@string/age_hint" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_row="8"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_gravity="fill"
        android:visibility="gone" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:text="@string/return_to_start" />

</GridLayout>