<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BMIChart"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_chart_header"
        android:textSize="24sp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_chart_text"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="576dp"
        android:orientation="vertical"
        android:padding="16dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/bmi_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_gravity="fill"
        android:visibility="gone" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:text="@string/return_to_start" />

</GridLayout>
